compiler/tests/success/otbn/bn_not.jazz
export
fn bn_not(reg u256 arg0) -> reg u256 {
    reg u256 x;
    x = !arg0;
    return x;
}
