compiler/tests/fail/arm-m4/intrinsic_revhS.jazz
export
fn rev16(reg u32 x) -> reg u32 {
    reg u32 y;

    ?{}, y = #REVSHS(x);
    return y;
}
